# sneakers-hse

./: .cruft.json  .gitignore  README.md  bad_images.md  docker-compose.yaml  label2idx.pkl  pyproject.toml  requirements.txt  tmp
.github/workflows/: ci.yml
api/connectors/: shopify_parser.py
api/core/: base_parser.py  downloader.py  rate_limiter.py  retry_utils.py
app/: README.md  main.py
app/fast_api/: README.md  app.py  resnet_app.py
conf/: s3_config.py
data/06_models/: .gitkeep
db/: models.py  session.py
models/: README.md  baseline_scaler.pkl  dataset.py  resnet18_new_dataset0201_class_names.json
notebooks/: 0_data_sneak_peek.ipynb  EDA.ipynb  README.md  eda_insights.md
notebooks/1-data/: augment_data.ipynb  azat_comments_yolo.md  download_dataset.ipynb  litdata.ipynb  litdata_check.ipynb  litdata_optimize.ipynb  upload_dataset.ipynb  yolo.ipynb
notebooks/2-exploration/: 0_data_sneak_peek.ipynb  augmentation.ipynb  bad_images.md  eda_insights_draft.md
notebooks/4-feat_eng/: baseline.ipynb  dinov2.ipynb  sift.ipynb  sift_200.ipynb  sift_200_hog.ipynb  sift_200_hog_augmented.ipynb  sift_300.ipynb  sift_50.ipynb
notebooks/5-models/: cnn.ipynb  dinov2 copy.ipynb  dinov2.ipynb  efficentnet.ipynb  resnet_bboxes.ipynb  resnet_new_dataset.ipynb  splitting_samples.ipynb  triplet_loss.ipynb  triplet_loss_augmented.ipynb  vit.ipynb  vit_augment.ipynb  vit_augment_final_fixed.ipynb  vit_augment_v2.ipynb  vit_lrd.ipynb  vit_retrieval.ipynb
notebooks/7-deploy/: README.md  dinov2.ipynb  dinov3.ipynb  snippets.ipynb
notebooks/debug/: shopify.ipynb
src/: README.md
utils/: background_analysis.py  eda_utils.py
(+30 files in other folders)
