[project]
name = "sneakers_hse"
version = "0.1.0"
description = "Сервис для поиска похожих кроссовок"
authors = [{name = "Ахмадуллин Азат"}, {name = "Макаренко Александр"}, {name = "Семячкин Александр"}]
requires-python = ">=3.10"

[project.urls]
repository = "https://github.com/xan-d-or/sneakers-hse"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cookies>=0.7.0",
    "pytest-cov>=6.1.1",
    "cruft[pyproject]>=2.15.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]